Fixes toggle button, was moving on mobile and tablet when using it

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -2298,7 +2298,7 @@ height: 95px;
 
   .bk-pt-home .widget .extendednavigation ul {
     border: none;
-    margin-top: 70px;
+    padding-top: 70px;
     li {
       padding: 10px 0;
       &:hover ul {
